@@ -1,3 +1,9 @@
+2008-12-12  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* doc/clock.n:  Document new DST fallback rules.
+	* library/clock.tcl (ProcessPosixTimeZone): Fix time change
+	in Eastern Europe (not 3:00 but 4:00 local time) [Bug 2207436]
+
 2008-12-12  Donal K. Fellows  <dkf@users.sf.net>
 
 	* generic/tclZlib.c, unix/configure.in: Added stubs to use when the
@@ -62,7 +68,7 @@
 
 	* library/clock.tcl (ProcessPosixTimeZone): Fallback to European time
 	zone DST rules, when the timezone is between 0 and -12. [Bug 2207436]
-	* tests/clock.test (clock-64.[12]): Test cases for [Bug 2207436]
+	* tests/clock.test (clock-52.[23]): Test cases for [Bug 2207436]
 	
 2008-12-11  Donal K. Fellows  <dkf@users.sf.net>
 
